Fix accent-low color contrast

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -84,7 +84,7 @@
 
 /* Dark mode colors. */
 :root {
-  --sl-color-accent-low: #1e8a42;
+  --sl-color-accent-low: #001306;
   --sl-color-accent: #1fc05d;
   --sl-color-accent-high: #52ca74;
   --sl-color-white: #ffffff;
